# freenect_stack

./: README.md
freenect_camera/: CHANGELOG.rst  CMakeLists.txt  package.xml
freenect_camera/cfg/: Freenect.cfg
freenect_camera/include/freenect_camera/: freenect_device.hpp  freenect_driver.hpp  tilt_driver.hpp
freenect_camera/src/nodelets/: driver.cpp
freenect_launch/: CHANGELOG.rst  CMakeLists.txt  package.xml
freenect_launch/launch/: freenect.launch
freenect_launch/launch/examples/: freenect-registered-xyzrgb.launch
freenect_launch/launch/includes/: depth.launch  depth_registered.launch  ir.launch
freenect_stack/: CHANGELOG.rst  package.xml
