<package>

  <name>freenect_launch</name>
  <version>0.2.1</version>
  <description>
    Launch files for freenect_camera to produce rectified, registered
    or disparity images.  Also produce point clouds and registered
    point clouds.  Based on the openni_launch package.
  </description>

  <maintainer email="jack.oquin@gmail.com">Jack O'Quin</maintainer>
  <maintainer email="piyushk@gmail.com">Piyush Khandelwal</maintainer>
  <license>BSD</license>
  <url type="website">http://ros.org/wiki/freenect_launch</url>
  <url type="repository">https://github.com/ros-drivers/freenect_stack.git</url>
  <url type="bugtracker">https://github.com/ros-drivers/freenect_stack/issues</url>

  <author>Patrick Mihelich (original openni_launch package)</author>
  <author>Piyush Khandelwal (libfreenect port)</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>depth_image_proc</build_depend>
  <build_depend>freenect_camera</build_depend>
  <build_depend>image_proc</build_depend>
  <build_depend>nodelet</build_depend>
  <build_depend>tf</build_depend>

  <run_depend>depth_image_proc</run_depend>
  <run_depend>freenect_camera</run_depend>
  <run_depend>image_proc</run_depend>
  <run_depend>nodelet</run_depend>
  <run_depend>tf</run_depend>

</package>
